--- a/examen/src/main/webapp/index.html
+++ b/examen/src/main/webapp/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Examen Git</title>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 </head>
 <body>
-    <h1 id="titulo">Bienvenido al Desarrollo Web</h1>
-    <div id="contenido"></div>
+
 </body>
 </html>
